update document contents

--- a/terms.html
+++ b/terms.html
@@ -18,25 +18,28 @@
       <li>Copy, distribute, or modify the App or any part of it.</li>
       <li>Use the App for any illegal or harmful purposes.</li>
       <li>Attempt to reverse-engineer or interfere with the functionality.</li>
+      <li>Bypass, hack, or attempt to bypass premium restrictions or paid features.</li>
     </ul>
 
     <h2>2. Account and Subscriptions</h2>
     <p>The App offers a Premium subscription with additional features. By subscribing:</p>
     <ul>
-      <li>You agree to the payment terms provided by the app store.</li>
-      <li>Subscriptions renew automatically unless cancelled.</li>
+      <li>All payments are handled by the respective app store (Google Play / Apple App Store).</li>
+      <li>Subscriptions renew automatically unless cancelled by the user via the app store.</li>
+      <li>The developer does not store or have access to your payment information.</li>
     </ul>
 
     <h2>3. Content and Sounds</h2>
     <p>All sounds are either:</p>
     <ul>
-      <li>Freely licensed (e.g., from freesound.org), or</li>
+      <li>Freely licensed (e.g., from <a href="https://freesound.org" target="_blank" rel="noopener noreferrer">freesound.org</a> or other free libraries), or</li>
       <li>Original content created for the App.</li>
     </ul>
     <p>If you upload or suggest content, you confirm you have the rights to do so.</p>
 
     <h2>4. Data Storage and Responsibility</h2>
     <p>All saved presets are stored locally on the user's device. If the app is uninstalled or the device is changed or reset, saved presets may be lost. The developer is not responsible for any data loss resulting from these actions.</p>
+    <p>The app does not collect personally identifiable information. Crash reports and analytics are collected anonymously using Firebase Analytics and Crashlytics to improve app performance and user experience.</p>
 
     <h2>5. Modifications</h2>
     <p>We may update or change the App and these terms at any time without prior notice. Continued use means you accept the changes.</p>
@@ -48,7 +51,7 @@
     <p>To the fullest extent permitted by law, we are not liable for damages resulting from your use of the App.</p>
 
     <h2>8. Privacy and Data Protection</h2>
-    <p>The NoiseNest Privacy Policy is a separate document available within the app and online. By using the App, you agree to the terms described therein.</p>
+    <p>The NoiseNest Privacy Policy is a separate document available within the app and online. By using the App, you agree to the terms described therein. Analytics and crash reporting are anonymized and do not store personal data.</p>
 
     <h2>9. User Responsibilities</h2>
     <p>Users are responsible for all activities carried out through their use of the App, especially when uploading or sharing content created by third parties.</p>
