--- a/licenses.html
+++ b/licenses.html
@@ -19,38 +19,42 @@
     <p>If any sounds require specific attribution or licensing terms, they will be clearly listed here. Please respect these terms when using the sounds.</p>
 
     <h2>Open Source Dependencies</h2>
-    <p>This app incorporates the following open source libraries, each licensed under their respective licenses (primarily MIT License). By using NoiseNest, you agree to comply with these licenses as they apply to the respective software components.</p>
+    <p>
+      This app incorporates the following open source libraries, each licensed under their respective licenses
+      (primarily MIT License). By using NoiseNest, you agree to comply with these licenses as they apply to the respective software components.
+    </p>
     <ul>
-      <li>@expo/vector-icons – MIT License</li>
       <li>@react-native-async-storage/async-storage – MIT License</li>
       <li>@react-native-community/netinfo – MIT License</li>
       <li>@react-native-community/slider – MIT License</li>
+      <li>@react-native-firebase/analytics – Apache 2.0 License</li>
+      <li>@react-native-firebase/app – Apache 2.0 License</li>
+      <li>@react-native-firebase/crashlytics – Apache 2.0 License</li>
+      <li>@react-native/new-app-screen – MIT License</li>
       <li>@react-navigation/drawer – MIT License</li>
       <li>@react-navigation/native – MIT License</li>
       <li>@react-navigation/native-stack – MIT License</li>
-      <li>expo – MIT License</li>
-      <li>expo-ads-admob – MIT License</li>
-      <li>expo-av – MIT License</li>
-      <li>expo-firebase-analytics – MIT License</li>
-      <li>expo-in-app-purchases – MIT License</li>
-      <li>expo-screen-orientation – MIT License</li>
-      <li>expo-status-bar – MIT License</li>
-      <li>expo-store-review – MIT License</li>
-      <li>i18next – MIT License</li>
-      <li>i18next-browser-languagedetector – MIT License</li>
       <li>react – MIT License</li>
       <li>react-i18next – MIT License</li>
       <li>react-native – MIT License</li>
+      <li>react-native-background-timer – MIT License</li>
       <li>react-native-draggable-flatlist – MIT License</li>
       <li>react-native-gesture-handler – MIT License</li>
-      <li>react-native-onboarding-swiper – MIT License</li>
+      <li>react-native-google-mobile-ads – Apache 2.0 License</li>
+      <li>react-native-iap – MIT License</li>
+      <li>react-native-in-app-review – MIT License</li>
+      <li>react-native-linear-gradient – MIT License</li>
+      <li>react-native-localize – MIT License</li>
+      <li>react-native-nitro-modules – MIT License</li>
       <li>react-native-paper – MIT License</li>
       <li>react-native-reanimated – MIT License</li>
-      <li>react-native-root-toast – MIT License</li>
       <li>react-native-safe-area-context – MIT License</li>
       <li>react-native-screens – MIT License</li>
+      <li>react-native-sound – MIT License</li>
+      <li>react-native-store-review – MIT License</li>
       <li>react-native-toast-message – MIT License</li>
       <li>react-native-vector-icons – MIT License</li>
+      <li>react-native-worklets – MIT License</li>
     </ul>
   </main>
 </body>
